--- a/.gitmodules
+++ b/.gitmodules
@@ -7,12 +7,21 @@
 [submodule "lib/gmx-contracts"]
 	path = lib/gmx-contracts
 	url = https://github.com/gmx-io/gmx-contracts
-[submodule "lib/modulekit"]
-	path = lib/modulekit
-	url = https://github.com/rhinestonewtf/modulekit
 [submodule "lib/solady"]
 	path = lib/solady
 	url = https://github.com/vectorized/solady
 [submodule "lib/gmx-synthetics"]
 	path = lib/gmx-synthetics
 	url = https://github.com/gmx-io/gmx-synthetics
+[submodule "lib/prb-math"]
+	path = lib/prb-math
+	url = https://github.com/PaulRBerg/prb-math
+[submodule "lib/hardhat"]
+	path = lib/hardhat
+	url = https://github.com/NomicFoundation/hardhat
+[submodule "lib/foundry-arbitrum"]
+	path = lib/foundry-arbitrum
+	url = https://github.com/saucepoint/foundry-arbitrum
+[submodule "lib/openzeppelin-contracts-upgradeable"]
+	path = lib/openzeppelin-contracts-upgradeable
+	url = https://github.com/OpenZeppelin/openzeppelin-contracts-upgradeable
